force-app/main/default/objects/Case_SLA_Exception_Rule_Conditions__c/Case_SLA_Exception_Rule_Conditions__c.object-meta.xml
<CustomObject>
    <label>Case SLA Exception Rule Conditions</label>
    <nameField>
        <label>Case SLA Exception Rule Conditions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case SLA Exception Rule Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>