force-app/main/default/objects/Case_SLA_Exception_Rule_Conditions__c/fields/Case_SLA_Exception_Rules__c.field-meta.xml
<CustomField>
    <fullName>Case_SLA_Exception_Rules__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case SLA Exception Rules</label>
    <referenceTo>Case_SLA_Exception_Rules__c</referenceTo>
    <relationshipLabel>Case SLA Exception Rule Conditions</relationshipLabel>
    <relationshipName>Case_SLA_Exception_Rule_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>