force-app/main/default/objects/Case_SLA_Exception_Rule_Conditions__c/fields/Field_Operator__c.field-meta.xml
<CustomField>
    <fullName>Field_Operator__c</fullName>
    <label>Field Operator</label>
    <type>TextArea</type>
</CustomField>