force-app/main/default/objects/Case_SLA_Exception_Rule_Conditions__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <label>Object Name</label>
    <type>TextArea</type>
</CustomField>