force-app/main/default/objects/Case_SLA_Exception_Rule_Conditions__c/fields/Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Name__c</fullName>
    <formula>IF(Object_Name__c == &apos;OpportunityLineItem&apos;, &apos; OpportunityLineItems&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relationship Name</label>
    <type>Text</type>
</CustomField>